generated/HogTraceParser.py
# Generated from HogTrace.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HogTraceParser ( Parser ):

    grammarFileName = "HogTrace.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'.'", "'entry'", "'exit'", "'+'", 
                     "'/'", "'{'", "'}'", "'='", "';'", "'$req'", "'$request'", 
                     "'sample'", "'%'", "'capture'", "'send'", "'('", "')'", 
                     "','", "'['", "']'", "'!'", "'-'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'&&'", "'||'", "<INVALID>", 
                     "<INVALID>", "'None'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PROVIDER", "BOOL", "NONE", "INT", "FLOAT", "STRING", 
                      "WILDCARD", "IDENTIFIER", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_probe = 1
    RULE_probeSpec = 2
    RULE_moduleFunction = 3
    RULE_probePoint = 4
    RULE_predicate = 5
    RULE_action = 6
    RULE_statement = 7
    RULE_assignment = 8
    RULE_requestVar = 9
    RULE_sampleDirective = 10
    RULE_sampleSpec = 11
    RULE_captureStatement = 12
    RULE_captureArgs = 13
    RULE_namedArg = 14
    RULE_expression = 15
    RULE_expressionList = 16
    RULE_literal = 17

    ruleNames =  [ "program", "probe", "probeSpec", "moduleFunction", "probePoint", 
                   "predicate", "action", "statement", "assignment", "requestVar", 
                   "sampleDirective", "sampleSpec", "captureStatement", 
                   "captureArgs", "namedArg", "expression", "expressionList", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    PROVIDER=32
    BOOL=33
    NONE=34
    INT=35
    FLOAT=36
    STRING=37
    WILDCARD=38
    IDENTIFIER=39
    WS=40
    COMMENT=41
    BLOCK_COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HogTraceParser.EOF, 0)

        def probe(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HogTraceParser.ProbeContext)
            else:
                return self.getTypedRuleContext(HogTraceParser.ProbeContext,i)


        def getRuleIndex(self):
            return HogTraceParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = HogTraceParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.probe()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

            self.state = 41
            self.match(HogTraceParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProbeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def probeSpec(self):
            return self.getTypedRuleContext(HogTraceParser.ProbeSpecContext,0)


        def action(self):
            return self.getTypedRuleContext(HogTraceParser.ActionContext,0)


        def predicate(self):
            return self.getTypedRuleContext(HogTraceParser.PredicateContext,0)


        def getRuleIndex(self):
            return HogTraceParser.RULE_probe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProbe" ):
                listener.enterProbe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProbe" ):
                listener.exitProbe(self)




    def probe(self):

        localctx = HogTraceParser.ProbeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_probe)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.probeSpec()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 44
                self.predicate()


            self.state = 47
            self.action()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProbeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.provider = None # Token

        def moduleFunction(self):
            return self.getTypedRuleContext(HogTraceParser.ModuleFunctionContext,0)


        def probePoint(self):
            return self.getTypedRuleContext(HogTraceParser.ProbePointContext,0)


        def PROVIDER(self):
            return self.getToken(HogTraceParser.PROVIDER, 0)

        def getRuleIndex(self):
            return HogTraceParser.RULE_probeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProbeSpec" ):
                listener.enterProbeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProbeSpec" ):
                listener.exitProbeSpec(self)




    def probeSpec(self):

        localctx = HogTraceParser.ProbeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_probeSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            localctx.provider = self.match(HogTraceParser.PROVIDER)
            self.state = 50
            self.match(HogTraceParser.T__0)
            self.state = 51
            self.moduleFunction()
            self.state = 52
            self.match(HogTraceParser.T__0)
            self.state = 53
            self.probePoint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(HogTraceParser.IDENTIFIER)
            else:
                return self.getToken(HogTraceParser.IDENTIFIER, i)

        def WILDCARD(self, i:int=None):
            if i is None:
                return self.getTokens(HogTraceParser.WILDCARD)
            else:
                return self.getToken(HogTraceParser.WILDCARD, i)

        def getRuleIndex(self):
            return HogTraceParser.RULE_moduleFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleFunction" ):
                listener.enterModuleFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleFunction" ):
                listener.exitModuleFunction(self)




    def moduleFunction(self):

        localctx = HogTraceParser.ModuleFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_moduleFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(HogTraceParser.IDENTIFIER)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 56
                self.match(HogTraceParser.T__1)
                self.state = 57
                _la = self._input.LA(1)
                if not(_la==38 or _la==39):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProbePointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HogTraceParser.RULE_probePoint

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExitOffsetProbeContext(ProbePointContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.ProbePointContext
            super().__init__(parser)
            self.offset = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(HogTraceParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExitOffsetProbe" ):
                listener.enterExitOffsetProbe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExitOffsetProbe" ):
                listener.exitExitOffsetProbe(self)


    class EntryOffsetProbeContext(ProbePointContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.ProbePointContext
            super().__init__(parser)
            self.offset = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(HogTraceParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntryOffsetProbe" ):
                listener.enterEntryOffsetProbe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntryOffsetProbe" ):
                listener.exitEntryOffsetProbe(self)


    class EntryProbeContext(ProbePointContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.ProbePointContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntryProbe" ):
                listener.enterEntryProbe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntryProbe" ):
                listener.exitEntryProbe(self)


    class ExitProbeContext(ProbePointContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.ProbePointContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExitProbe" ):
                listener.enterExitProbe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExitProbe" ):
                listener.exitExitProbe(self)



    def probePoint(self):

        localctx = HogTraceParser.ProbePointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_probePoint)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = HogTraceParser.EntryProbeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(HogTraceParser.T__2)
                pass

            elif la_ == 2:
                localctx = HogTraceParser.ExitProbeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(HogTraceParser.T__3)
                pass

            elif la_ == 3:
                localctx = HogTraceParser.EntryOffsetProbeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.match(HogTraceParser.T__2)
                self.state = 66
                self.match(HogTraceParser.T__4)
                self.state = 67
                localctx.offset = self.match(HogTraceParser.INT)
                pass

            elif la_ == 4:
                localctx = HogTraceParser.ExitOffsetProbeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.match(HogTraceParser.T__3)
                self.state = 69
                self.match(HogTraceParser.T__4)
                self.state = 70
                localctx.offset = self.match(HogTraceParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HogTraceParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HogTraceParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)




    def predicate(self):

        localctx = HogTraceParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(HogTraceParser.T__5)
            self.state = 74
            self.expression(0)
            self.state = 75
            self.match(HogTraceParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HogTraceParser.StatementContext)
            else:
                return self.getTypedRuleContext(HogTraceParser.StatementContext,i)


        def getRuleIndex(self):
            return HogTraceParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = HogTraceParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(HogTraceParser.T__6)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 112640) != 0):
                self.state = 78
                self.statement()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(HogTraceParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(HogTraceParser.AssignmentContext,0)


        def sampleDirective(self):
            return self.getTypedRuleContext(HogTraceParser.SampleDirectiveContext,0)


        def captureStatement(self):
            return self.getTypedRuleContext(HogTraceParser.CaptureStatementContext,0)


        def getRuleIndex(self):
            return HogTraceParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = HogTraceParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.assignment()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.sampleDirective()
                pass
            elif token in [15, 16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.captureStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def requestVar(self):
            return self.getTypedRuleContext(HogTraceParser.RequestVarContext,0)


        def expression(self):
            return self.getTypedRuleContext(HogTraceParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HogTraceParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = HogTraceParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.requestVar()
            self.state = 92
            self.match(HogTraceParser.T__8)
            self.state = 93
            self.expression(0)
            self.state = 94
            self.match(HogTraceParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequestVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(HogTraceParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return HogTraceParser.RULE_requestVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequestVar" ):
                listener.enterRequestVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequestVar" ):
                listener.exitRequestVar(self)




    def requestVar(self):

        localctx = HogTraceParser.RequestVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_requestVar)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(HogTraceParser.T__10)
                self.state = 97
                self.match(HogTraceParser.T__1)
                self.state = 98
                self.match(HogTraceParser.IDENTIFIER)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(HogTraceParser.T__11)
                self.state = 100
                self.match(HogTraceParser.T__1)
                self.state = 101
                self.match(HogTraceParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SampleDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sampleSpec(self):
            return self.getTypedRuleContext(HogTraceParser.SampleSpecContext,0)


        def getRuleIndex(self):
            return HogTraceParser.RULE_sampleDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSampleDirective" ):
                listener.enterSampleDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSampleDirective" ):
                listener.exitSampleDirective(self)




    def sampleDirective(self):

        localctx = HogTraceParser.SampleDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sampleDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(HogTraceParser.T__12)
            self.state = 105
            self.sampleSpec()
            self.state = 106
            self.match(HogTraceParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SampleSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HogTraceParser.RULE_sampleSpec

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PercentageSampleContext(SampleSpecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.SampleSpecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(HogTraceParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPercentageSample" ):
                listener.enterPercentageSample(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPercentageSample" ):
                listener.exitPercentageSample(self)


    class RatioSampleContext(SampleSpecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.SampleSpecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(HogTraceParser.INT)
            else:
                return self.getToken(HogTraceParser.INT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRatioSample" ):
                listener.enterRatioSample(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRatioSample" ):
                listener.exitRatioSample(self)



    def sampleSpec(self):

        localctx = HogTraceParser.SampleSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sampleSpec)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = HogTraceParser.PercentageSampleContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(HogTraceParser.INT)
                self.state = 109
                self.match(HogTraceParser.T__13)
                pass

            elif la_ == 2:
                localctx = HogTraceParser.RatioSampleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(HogTraceParser.INT)
                self.state = 111
                self.match(HogTraceParser.T__5)
                self.state = 112
                self.match(HogTraceParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaptureStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def captureArgs(self):
            return self.getTypedRuleContext(HogTraceParser.CaptureArgsContext,0)


        def getRuleIndex(self):
            return HogTraceParser.RULE_captureStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaptureStatement" ):
                listener.enterCaptureStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaptureStatement" ):
                listener.exitCaptureStatement(self)




    def captureStatement(self):

        localctx = HogTraceParser.CaptureStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_captureStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not(_la==15 or _la==16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 116
            self.match(HogTraceParser.T__16)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 816048117760) != 0):
                self.state = 117
                self.captureArgs()


            self.state = 120
            self.match(HogTraceParser.T__17)
            self.state = 121
            self.match(HogTraceParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaptureArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HogTraceParser.RULE_captureArgs

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NamedCaptureArgsContext(CaptureArgsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.CaptureArgsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def namedArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HogTraceParser.NamedArgContext)
            else:
                return self.getTypedRuleContext(HogTraceParser.NamedArgContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedCaptureArgs" ):
                listener.enterNamedCaptureArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedCaptureArgs" ):
                listener.exitNamedCaptureArgs(self)


    class PositionalCaptureArgsContext(CaptureArgsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HogTraceParser.CaptureArgsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HogTraceParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HogTraceParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionalCaptureArgs" ):
                listener.enterPositionalCaptureArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionalCaptureArgs" ):
                listener.exitPositionalCaptureArgs(self)



    def captureArgs(self):
